@@ -75,6 +75,7 @@ All:
 - Add wxLZMA{Input,Output}Stream classes using external liblzma.
 - Make wxList and wxVector iterators conform to input iterator requirements.
 - Fix MT-safety problem when reading and writing from wxSocket (jkubalik).
+- Add support for WX_NO_ABI_CHECK environment variable.
 
 All (GUI):
 
